--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	</section>
 
 
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="Script.js"></script>
 </body>
 </html>
  
