--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<h4>About Me</h4>
 					<p>To be a part of an organization where I can fully utilize my skills in Energy Management to make a significant contribution to the success of the employer, while at the same time pursuing my individual growth.</p>
 
-					<p>In 2019 I have done my Graduation from Gla University in Electrical Engineering(Honors). Working for an Energy Management company as an Executive.<h5>Specialization</h5> <p>Energy Production, Distribution & Safety</p> </p>
+					<p>In 2019 I have done my Graduation from Gla University in Electrical Engineering(Honors). Working for an Energy Management company as an Executive.<h5>Specialization</h5> <p><a href="https://www.coursera.org/account/accomplishments/specialization/T4GL37EHZ7XU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=s12n">Energy Production, Distribution & Safety</a></p> </p>
 
 					
 
